# ciai

./: .gitignore  CMakeLists.txt  README.md
bordel/: README.md
doc/: README.md
ihm/: README.md
src/: CMakeLists.txt  mothertask.cpp  plan_de_tests.txt
src/controleur/: README.md  controleur.cpp  controleur.h
src/destock/: README.md  destock.cpp  destock.h
src/gestionSerie/: gestionserie.cpp  gestionserie.h
src/gestionserie/: gestionserie.cpp  gestionserie.h
src/imprimer/: README.md  imprimer.cpp  imprimer.h
src/log/: README.md  log.cpp  log.h
src/mailbox/: README.md  mailbox.cpp  mailbox.h  mailbox.ih
src/modeles/: README.md  modeles.h
src/multithreadObjects/: mutex.cpp  mutex.h  sharedMemory.h  sharedMemory.h~
src/mutex/: README.md  mutex.cpp  mutex.h
src/piece/: README.md  piece.cpp  piece.h
src/remplirCarton/: README.md  remplirCarton.cpp  remplirCarton.h
src/remplirPalette/: README.md  remplirPalette.cpp  remplirPalette.h
src/remplissageCarton/: remplissageCarton.cpp  remplissageCarton.h
src/sockets/: messages.h  netsend.cpp  netsend.h  network.c  network.cpp  network.h  parser.c  parser.cpp  parser.h  server.cpp
src/stock/: README.md  stock.cpp  stock.h
src/stubs/: README.md  stubs.cpp  stubs.h
src/tacheImprimer/: imprimer.h
tests/: CMakeLists.txt  testmutex.cpp
tests/controleur/: CMakeLists.txt  testControleur.cpp
tests/destockage/: CMakeLists.txt  testDestock.cpp
tests/imprimer/: CMakeLists.txt  Makefile  testTacheImprimer.cpp
tests/log/: main.cpp  plan_de_tests.txt
tests/mailbox/: plan_de_tests.txt  test.cpp
tests/mutex/: testmutex.cpp
tests/remplirCarton/: CMakeLists.txt  main  main.cpp  planDeTestRemplirCarton.txt  testRemplirCarton.cpp  utilTest.h
tests/remplirPalette/: CMakeLists.txt  main.cpp  plan_de_tests.txt  testRemplirPalette.cpp
tests/sockets/: client.py  infostests.py  obsolete_main.cpp  plan_de_tests.txt  tcpclient.py  test_network.py
tests/stockage/: CMakeLists.txt  testStock.cpp
